# CacatuidaeEngine

./: .gitignore  CMakeLists.txt  Readme.md
docs/: doxy.conf
docs/html/: CMakeLists_8txt.html  GraphicsEngine__Test_8cpp.html  IRenderer_8h.html  IRenderer_8h__dep__incl.dot  IRenderer_8h__dep__incl.md5  IRenderer_8h__incl.dot  IRenderer_8h__incl.md5  IRenderer_8h_source.html  OGLRenderer_8cpp.html  OGLRenderer_8cpp__incl.dot  OGLRenderer_8cpp__incl.md5  OGLRenderer_8h.html  OGLRenderer_8h__dep__incl.dot  OGLRenderer_8h__dep__incl.md5  OGLRenderer_8h__incl.dot  OGLRenderer_8h__incl.md5  OGLRenderer_8h_source.html  RenderSystem__Test_8cpp.html  Renderer__Test_8cpp.html  Renderer__Test_8cpp__incl.dot  Renderer__Test_8cpp__incl.md5  a00001.html  a00002.html  a00002_source.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.dot  a00010.md5  a00011.dot  a00011.md5  a00012.dot  a00012.md5  annotated.html  classCockatoo_1_1Graphic_1_1IRenderer-members.html  classCockatoo_1_1Graphic_1_1IRenderer.html  (+61 more)
docs/latex/: CMakeLists_8txt.tex  GraphicsEngine__Test_8cpp.tex  IRenderer_8h.tex  IRenderer_8h.tex.tmp  IRenderer_8h__dep__incl.dot  IRenderer_8h__dep__incl.md5  IRenderer_8h__incl.dot  IRenderer_8h__incl.md5  OGLRenderer_8cpp.tex  OGLRenderer_8cpp__incl.dot  OGLRenderer_8cpp__incl.md5  OGLRenderer_8h.tex  OGLRenderer_8h__dep__incl.dot  OGLRenderer_8h__dep__incl.md5  OGLRenderer_8h__incl.dot  OGLRenderer_8h__incl.md5  RenderSystem__Test_8cpp.tex  Renderer__Test_8cpp.tex  Renderer__Test_8cpp__incl.dot  Renderer__Test_8cpp__incl.md5  a00001.tex  a00002.tex  a00002.tex.tmp  a00003.tex  a00004.tex  a00005.tex  a00006.tex  a00007.tex  a00008.tex  a00009.tex  a00010.dot  a00010.md5  a00011.dot  a00011.md5  a00012.dot  a00012.md5  annotated.tex  classCockatoo_1_1Graphic_1_1IRenderer.tex  classCockatoo_1_1Graphic_1_1IRenderer__inherit__graph.dot  classCockatoo_1_1Graphic_1_1IRenderer__inherit__graph.md5  (+40 more)
include/Audio/: AudioManager.h  Sound.h
include/Core/: GameEngine.h  IGameScene.h  IResource.h  Message.h  ResourceLoader.h  ResourcePackage.h
include/Graphic/: Camera.h  Font.h  FontResource.h  GraphicStructs.h  (+12 more)
src/: CMakeLists.txt  math.cpp
tests/: CMakeLists.txt
tests/Graphic/: CMakeLists.txt  GraphicsEngine_Test.cpp  RenderEngine_Test.cpp  RenderSystem_Test.cpp  Renderer_Test.cpp
(+87 files in other folders)
