#Cockatoo/
cmake_minimum_required(VERSION 2.8.11)
project(Cacatuidae)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/")
Set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/")


SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall ")
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -Wall")

set(TEST_HEADER)

set(HEADER_FILES ${HEADER_FILES} 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    )  

add_subdirectory(external)
add_subdirectory(src)


    
if(RUN_TESTS)
add_subdirectory(tests)
endif(RUN_TESTS)

set(HEADER_FILES ${HEADER_FILES} PARENT_SCOPE)	    
set(SOURCE_FILES ${SOURCE_FILES} PARENT_SCOPE)
set(LIBRARIES ${LIBRARIES}  PARENT_SCOPE)